k8s/urlredirection/urlredirection-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: urlredirection-deployment
  namespace: url-system
  labels:
    app: urlredirection
spec:
  replicas: 1
  selector:
    matchLabels:
      app: urlredirection
  template:
    metadata:
      labels:
        app: urlredirection
    spec:
      containers:
        - name: urlredirection
          image: neel0086/urlredirection:25426e1
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
