k8s/urlredirection/urlredirection-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: urlredirection-networkpolicy
  namespace: url-system
spec:
  podSelector:
    matchLabels:
      app: urlredirection
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - {}
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: urlanalytics
      ports:
        - protocol: TCP
          port: 8082
    - to:
        - podSelector:
            matchLabels:
              app: kafka
      ports:
        - protocol: TCP
          port: 9092
    - to:
        - podSelector:
            matchLabels:
              app: redis
      ports:
        - protocol: TCP
          port: 6379
    - {}
